--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	// https://mvnrepository.com/artifact/com.google.firebase/firebase-admin
-	implementation 'com.google.firebase:firebase-admin:9.4.1'
+//	implementation 'com.google.firebase:firebase-admin:9.4.1'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+	// https://mvnrepository.com/artifact/com.paypal.sdk/rest-api-sdk
+	implementation group: 'com.paypal.sdk', name: 'rest-api-sdk', version: '1.14.0'
+
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
