--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.application.name=virtualcourse
 server.port=8080
 
 # Database configuration
-db.port=3307
+db.port=3306
 db.name=VirtualCourseDB
 db.endpoint=localhost
-db.username=root
-db.password=admin123
+db.username=project4
+db.password=Chuong123
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${db.endpoint}:${db.port}/${db.name}
@@ -31,5 +31,13 @@ logging.level.org.hibernate=WARN
 logging.level.com.aptech.virtualcourse=INFO
 
 # upload file
-file.upload-dir=src/main/resources/uploads
+#file.upload-dir=src/main/resources/uploads
 
+#file.upload-dir=uploads/instructor
+file.upload-dir=uploads
+# T?ng gi?i h?n kích th??c file upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+virtualcourse.app.jwtSecretFilePath=./jwt-secret.key
+virtualcourse.app.jwtExpirationMs=86400000
