--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 
 # Database configuration
 db.port=3307
-db.name=VirtualCourseDB
+db.name=virtual_course_db
 db.endpoint=localhost
 db.username=root
 db.password=admin123
@@ -20,6 +20,12 @@ spring.datasource.password=${db.password}
 spring.jpa.hibernate.ddl-auto=update
 spring.main.banner-mode=off
 
+#JWT
+virtualcourse.app.jwtSecret========================VirtualCourse======================
+virtualcourse.app.jwtExpirationMs=86400000
+virtualcourse.app.jwtRefreshExpirationMs=86400000
+virtualcourse.app.jwtRefreshCookieName=refreshToken
+
 # SpringDoc configuration
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
@@ -32,4 +38,5 @@ logging.level.com.aptech.virtualcourse=INFO
 
 # upload file
 file.upload-dir=src/main/resources/uploads
-
+# C?u hình Spring Boot ?? ph?c v? các file t?nh
+spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/uploads/
