--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	// https://mvnrepository.com/artifact/com.google.firebase/firebase-admin
-	implementation 'com.google.firebase:firebase-admin:9.4.1'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
@@ -67,8 +66,9 @@ dependencies {
 	testImplementation 'org.testcontainers:mysql'
 
 	// JWT
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
 	// Configuration Processor
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
