--- a/build.gradle
+++ b/build.gradle
@@ -36,12 +36,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	// https://mvnrepository.com/artifact/com.google.firebase/firebase-admin
-//	implementation 'com.google.firebase:firebase-admin:9.4.1'
+	//JSON support
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 
 	// https://mvnrepository.com/artifact/com.paypal.sdk/rest-api-sdk
 	implementation group: 'com.paypal.sdk', name: 'rest-api-sdk', version: '1.14.0'
+
+	// Starter WebSocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+	// sử dụng bảo mật cho WebSocket endpoint
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
