--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// MySQL Connector
+    // implementation 'mysql:mysql-connector-java:8.0.39'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 	// JJWT API
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 
@@ -77,6 +81,8 @@ dependencies {
 	// JWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+// Springdoc OpenAPI UI để tích hợp Swagger UI
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 
 	// Configuration Processor
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
