--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,9 +35,13 @@ logging.level.com.aptech.virtualcourse=INFO
 
 #file.upload-dir=uploads/instructor
 file.upload-dir=uploads
-# T?ng gi?i h?n kích th??c file upload
+# T?ng gi?i h?n kï¿½ch th??c file upload
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
 virtualcourse.app.jwtSecretFilePath=./jwt-secret.key
 virtualcourse.app.jwtExpirationMs=86400000
+
+management.endpoints.web.exposure.include=*
+management.server.port=8081
+
+# logging.level.org.springframework.web=DEBUG
