--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// OAuth2 Client (nếu đăng nhập Google/Facebook)
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	//JSON support
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
