--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ logging.level.org.springframework=WARN
 logging.level.org.hibernate=WARN
 logging.level.com.aptech.virtualcourse=INFO
 
-# upload file
+# Upload file directory
 file.upload-dir=src/main/resources/uploads
 
 # PayPal configuration
@@ -38,7 +38,7 @@ paypal.client.id=${PAYPAL_CLIENT_ID}
 paypal.client.secret=${PAYPAL_CLIENT_SECRET}
 paypal.mode=sandbox
 
-# VnPay Payment
+# VnPay Payment configuration
 vnpay.tmnCode=${VNPAY_TMN_CODE}
 vnpay.hashSecret=${VNPAY_HASH_SECRET}
 vnpay.baseUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
@@ -72,6 +72,14 @@ spring.security.oauth2.client.provider.facebook.authorization-uri=https://www.fa
 spring.security.oauth2.client.provider.facebook.token-uri=https://graph.facebook.com/v10.0/oauth/access_token
 spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email
 spring.security.oauth2.client.provider.facebook.user-name-attribute=id
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # JWT token expiration time in milliseconds (86400000 ms = 1 day)
 jwt.expirationMs=86400000
