--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,10 @@ dependencies {
 	// JJWT Jackson (Để xử lý JSON)
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Hoặc sử dụng jjwt-gson nếu bạn thích
 
+	// Email
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
 	// https://mvnrepository.com/artifact/com.google.firebase/firebase-admin
 	implementation 'com.google.firebase:firebase-admin:9.4.1'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
