--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 spring.application.name=virtualcourse
 
 # Server configuration
-server.port=8180
+server.port=8080
 
 # Database configuration
 db.port=3306
 db.name=VirtualCourseDB
 db.endpoint=localhost
-db.username=root
-db.password=admin123
+db.username=project4
+db.password=chuong123
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${db.endpoint}:${db.port}/${db.name}
