--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,8 +77,8 @@ spring.security.oauth2.client.provider.facebook.user-name-attribute=id
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.username=tindien1995@gmail.com
+spring.mail.password=viid fslb etcq srqh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
